Correct results and conclusion

--- a/master.tex
+++ b/master.tex
@@ -35,7 +35,7 @@ Therefore, this article proposes a highly modular and flexible framework for seg
 \section{Conclusions}
 This work presents a segmentation strategy to delineate lesions in \ac{bus} images using an optimization framework that takes advantage of all the facilities available when using \ac{ml} techniques.
 Despite the limitation that the final segmentation is subject to the super-pixels' boundaries, the \ac{aov} results here reported are similar to those reported by other methodologies in the literature.
-A higher \ac{aov} result can be achieved by deforming the delineation resulting from the proposed framework using this to initialize a second post-processing step based on \ac{acm}. In this manner the contour constrains could be applied to achieve a more natural delineation.
+A higher \ac{aov} result can be achieved by refining the delineation resulting from our proposed framework by post-processing it with an \ac{acm}. In this manner the contour constraints could be applied to achieve a more natural delineation.
 
 \bibliography{./content/literature_review}   %>>>> bibliography data in report.bib
 \bibliographystyle{splncs03}
