--- a/content/literature_review.bib
+++ b/content/literature_review.bib
@@ -12,11 +12,11 @@
 }
 
 @PhdThesis{massich2013phd,
-  title={Deformable object segmentation in ultra-sound images},
-  author = { Massich, Joan},
-  school = { University of Girona, and University of Burgundy},
-  month = { december },
-  year = "2013",
+  title={****************************************************},
+  author = { *******, ****},
+  school = { ********** ** ******, *** ********** ** ********},
+  month = { ******** },
+  year = "****",
 }
 
 @inproceedings{Angelova:2009p14781,
