--- a/content/method/applied.tex
+++ b/content/method/applied.tex
@@ -5,7 +5,8 @@ Choices made regarding these different elements:
 the representation $\mathcal{S}$, the data term $D(\cdot)$, the pairwise term $V(.)$, and the optimizer choice are summarized in Table~\ref{tab:method} and justified thereafter (see Fig.\,\ref{fig:method} for reference).
 
 $\mathcal{S}$ is considered the result from an over-segmentation of the image using Quick-shift super-pixel~\cite{achanta2012slic}. 
-The structures of the breast and their rendering when using a hand-held 2D \ac{us} probe are sketched in Fig.\,\ref{fig:features}a. Figure~\ref{fig:features}b illustrates the lexicon proposed by the \ac{acr}~\cite{biradsus} and used by clinicians to perform their diagnosis. Thus, our aim is to generate a set of computer vision features which is able to encode the characteristic described in the lexicon. The selected features are the following:
+The structures of the breast and their rendering when using a hand-held 2D \ac{us} probe are sketched in Fig.\,\ref{fig:features}a. Figure~\ref{fig:features}b illustrates the lexicon proposed by the \ac{acr}~\cite{biradsus} and used by clinicians to perform their diagnosis. Thus, our aim is to generate a set of computer vision features which is able to encode the characteristic described in the lexicon. 
+The selected features are the following:
 
 \begin{figure}[t]
     \centering
