--- a/content/results/figures/survey.tex
+++ b/content/results/figures/survey.tex
@@ -68,7 +68,7 @@
     \begin{tikzpicture}[font=\tiny]
       \begin{customlegend}[ 
         legend style={ draw=none},
-        legend entries={AOV, Result}
+        legend entries={AOV, Our results}
         ]
         \addlegendimage{db,draw=aov,thick,sharp plot}
         \addlegendimage{db,draw=black,thick,sharp plot}
