--- a/latex/filesystem/package.tex
+++ b/latex/filesystem/package.tex
@@ -19,6 +19,8 @@
 % the newclude package is required
 \usepackage{newclude}
 
+\usepackage{array}
+
 % Required for acronyms
 % use \acresetall to reset the acroyms counter
 \usepackage{acro}
