--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -2,23 +2,6 @@
 \graphicspath{ {./content/results/figures/} }
 \input{./content/results/figures/quantitative_figure_definitions.tex}
 
-
-\section{Method evaluation and comparison} 
-A 16 \ac{bus} images dataset with accompanying multi-label \ac{gt} delineating all the structures present in the images has been used to evaluate the proposed methodology for lesion segmentation application.
-Every image in the dataset presents a single lesion with a variable extension. 
-The size of the lesions ranges from under $1/100$ to over $1/5$ of the image size.
-The dataset is composed of cysts, \acp{fa}, \acp{dic} and \acp{ilc}.
-
-Figure~\ref{fig:results} shows  qualitative results, whereas the quantitative results from the best configuration are reported as a table in Fig.\,\ref{fig:surveyResults}. %~\cite{massich2013phd}.
-Notice that for the proposed framework, the performance in terms of \ac{aov} is limited by the capacity of the super-pixels to snap the desired boundary.
-Figure~\ref{fig:results} depicts the difference between the delineation resulting from a proper labeling of the super-pixels and the one from the \ac{gt}.
-%Despite the fact that a \ac{fpr} of $0.4$ seems significant, based on our experiments most of the images produce no \ac{fp} lesions.
-%However, images with \ac{fp} lesions, are likely to produce more several of them as shown in \cref{fig:results}c-e.
-%The amount of \ac{fp} lesions can be trimmed by applying a higher cost in the pairwise therm (compare \cref{fig:resuts:smallPWterm} and \cref{fig:results:bigPWterm}.
-%Nevertheless, a severe increasing of the pairwise cost also increases the \ac{fnr} since some lesions are missed due to over-smoothing. %~\cite{massich2013phd}.
-%The situation of having a larger \ac{fnr} is less desirable than reducing the \ac{fpr}. 
-%The \ac{fnr} reported in \cref{fig:surveyResults:method} is caused by an image within the dataset that its lesion is fully contained in a single super-pixel and still around $20\%$ of this super-pixel's area is healty tissue. 
-
 \begin{figure}[t]
   \centering
   
@@ -57,28 +40,8 @@ Figure~\ref{fig:results} depicts the difference between the delineation resultin
   \label{fig:results}
 \end{figure}
 
-Due to the lack of publicly available data and source code there is no manner to perform a methodology comparison further than compiling the results reported in the literature.
-Based on \emph{******** et al.} the State-of-the-art methodologies found in the literature are summarized in Fig.\,\ref{fig:surveyResults} and the results are reported in terms of \ac{aov} for comparison purposes. The references equivalence can be found in~\cite{massich2013phd}
-%compiles relevant metholodologies relevant methodologies found in the literature 
-%The table in \Cref{fig:surveyResults:survey} complies the evaluation reported by the authors of the most relevant methodologies found in the literature. %~\cite{massich2013phd}.
-%Details about the methodologies proposed in the literature can also be found in the aforesaid table.
-%Specifically it is detailed the category of technique been used for detecting the lesions, segmenting it and post-process the delineations (if any).
-%The studied categories are: \ac{ml}, \ac{acm} and others.
-The iconography used for the table, relates methodology stages, the technology used and if the stages have been treated separately or as a single processing.
-%if the those stages are treated as independent and connected in a daisy-chain fashion, or otherwise the stages are addressed in an atomic manner.
 
-The figure, also arranges the information in a radial manner for direct visual comparison.
-%\Cref{fig:surveyResults:comparison} renders the information present in \cref{fig:surveyResults:survey} and \cref{fig:surveyResults:method} in a visual manner compare all the results at once.
-%The methodologies arranged in a radial fashion and grouped by its most representative technology category. 
-%In red it can be found a small, medium and large categorization of the dataset reported for testing.
-%The concentric circles represent \ac{aov}. 
-%The blue line correspond to the \ac{aov} results reported in the literature, whereas the black line indicates the \ac{aov} our framework scored in our testing.
-An extra element is also represented in this radial representation: a blue swatch delimited by two blue dashed lines.
-The boundaries of this swatch correspond to the performance of some expert radiologists in terms of \ac{aov} based on an inter- and intra-observer experiment carried out by Pons et al.~\cite{gerard2013}.
-%\footnote{The dataset used for testing the framework here proposed corresponds to the subset of images used by Pons et al.~\cite{gerard2013} that have accompanying multi-labelled \ac{gt}.}.
-
-Comparing these results, the inconvenience of unexciting public data can be obviously highlighted, since that several of these results outperform the manual delineations performed in Pons et al.~\cite{gerard2013}.
-It can also be seen that the category \ac{ml} methods haven used for larger dataset, whereas \ac{acm} methods lead to better segmentation since that the lesion boundary is easier to model with \ac{acm} compared to \ac{ml} based techniques.
+\section{Method evaluation and comparison} 
 
 \begin{figure}[t]
   \begin{subfigure}[b]{\textwidth}
@@ -95,6 +58,53 @@ It can also be seen that the category \ac{ml} methods haven used for larger data
   \label{fig:surveyResults}
 \end{figure}
 
+A 16 \ac{bus} images dataset with accompanying multi-label \ac{gt} delineating all the structures present in the images has been used to evaluate the proposed methodology for lesion segmentation application.
+Every image in the dataset presents a single lesion with a variable extension. 
+The size of the lesions ranges from under $1/100$ to over $1/5$ of the image size.
+The dataset is composed of cysts, \acp{fa}, \acp{dic} and \acp{ilc}. This dataset is now publicly available at \texttt{http://*************}
+
+Due to the lack of publicly available dataset and source code, a comparison between the different methods can only be limited to a compilation of results provided by the different authors on their own data. \emph{******** et al.}~\cite{massich2013phd} compile such information in terms of \ac{aov} as depicted in Fig.\,\ref{fig:surveyResults}.
+
+Figure~\ref{fig:surveyResults} is divided in three main parts: (i) a table on the top summarizes the core stages of each study framework, (ii) a legend box on the right side informing of our testing setup and (iii) a comparison of the different metrics in a radial manner. An extra element is also represented in this radial representation: a blue swatch delimited by two blue dashed lines. The boundaries of this swatch correspond to the performance of some expert radiologists in terms of \ac{aov} based on an inter- and intra-observer experiments carried out by Pons et al. on the same dataset used in our experiments~\cite{gerard2013}.
+
+It is interested to note that the performance of some of the state-of-the-art methods outperform the performance of our radiologists. A publicly available dataset should allow a better comparison in that regard. Furthermore, \ac{ml} methods have been developed in conjunction with larger dataset, whereas \ac{acm} methods lead to a better segmentation due to the capability of these methods to better model the lesion boundary.
+
+For our proposed framework, the performance in terms of \ac{aov} is limited by the capacity of the super-pixels to snap the desired boundary. Figure~\ref{fig:results} depicts the differences between the delineation resulting from a proper labeling of the super-pixels and the one from the \ac{gt}.
+
+%The iconography used for the table, relates methodology stages, the technology used and if the stages have been treated separately or as a single processing.
+%The figure, also arranges the information in a radial manner for direct visual comparison.
+
+
+
+%Comparing these results, the inconvenience of unexciting public data can be obviously highlighted, since that several of these results outperform the manual delineations performed in Pons et al.~\cite{gerard2013} on the dataset here used.
+
+
+% Figure~\ref{fig:results} shows qualitative results, whereas the quantitative results from the best configuration are reported as a table in Fig.\,\ref{fig:surveyResults}. %~\cite{massich2013phd}.
+
+%Despite the fact that a \ac{fpr} of $0.4$ seems significant, based on our experiments most of the images produce no \ac{fp} lesions.
+%However, images with \ac{fp} lesions, are likely to produce more several of them as shown in \cref{fig:results}c-e.
+%The amount of \ac{fp} lesions can be trimmed by applying a higher cost in the pairwise therm (compare \cref{fig:resuts:smallPWterm} and \cref{fig:results:bigPWterm}.
+%Nevertheless, a severe increasing of the pairwise cost also increases the \ac{fnr} since some lesions are missed due to over-smoothing. %~\cite{massich2013phd}.
+%The situation of having a larger \ac{fnr} is less desirable than reducing the \ac{fpr}. 
+%The \ac{fnr} reported in \cref{fig:surveyResults:method} is caused by an image within the dataset that its lesion is fully contained in a single super-pixel and still around $20\%$ of this super-pixel's area is healty tissue. 
+
+% Due to the lack of publicly available data and source code, there is no manner to perform a comparison further apart of compiling the results reported in the literature.
+% Based on \emph{******** et al.} the state-of-the-art methodologies found in the literature, the results are summarized in Fig.\,\ref{fig:surveyResults} and are reported in terms of \ac{aov} for comparison purposes. The references equivalence can be found in~\cite{massich2013phd}
+%compiles relevant metholodologies relevant methodologies found in the literature 
+%The table in \Cref{fig:surveyResults:survey} complies the evaluation reported by the authors of the most relevant methodologies found in the literature. %~\cite{massich2013phd}.
+%Details about the methodologies proposed in the literature can also be found in the aforesaid table.
+%Specifically it is detailed the category of technique been used for detecting the lesions, segmenting it and post-process the delineations (if any).
+%The studied categories are: \ac{ml}, \ac{acm} and others.
+%if the those stages are treated as independent and connected in a daisy-chain fashion, or otherwise the stages are addressed in an atomic manner.
+
+
+%\Cref{fig:surveyResults:comparison} renders the information present in \cref{fig:surveyResults:survey} and \cref{fig:surveyResults:method} in a visual manner compare all the results at once.
+%The methodologies arranged in a radial fashion and grouped by its most representative technology category. 
+%In red it can be found a small, medium and large categorization of the dataset reported for testing.
+%The concentric circles represent \ac{aov}. 
+%The blue line correspond to the \ac{aov} results reported in the literature, whereas the black line indicates the \ac{aov} our framework scored in our testing.
+
+%\footnote{The dataset used for testing the framework here proposed corresponds to the subset of images used by Pons et al.~\cite{gerard2013} that have accompanying multi-labelled \ac{gt}.}.
 
 %%% Local Variables: 
 %%% mode: latex
