--- a/content/results/results.tex
+++ b/content/results/results.tex
@@ -1,123 +1,4 @@
-% include the figures path relative to the master file
-\graphicspath{ {./content/results/figures/} }
-\input{./content/results/figures/quantitative_figure_definitions.tex}
+% % include the figures path relative to the master file
+% \graphicspath{ {./content/results/figures/} }
 
-\begin{figure}[t]
-  \centering
-  
-  \begin{tikzpicture}
-  \tikzstyle{noMargin} = [inner sep=0mm, outer sep=0mm]
-  \node[noMargin](a){
-    \includegraphics[trim= 20 0 30 0, clip, height=3cm]{goodQSorigin}
-  };
-  \node[noMargin, right= 3pt of a](b){
-    \includegraphics[trim= 20 0 30 0, clip, height=3cm]{goodQSseg}
-    };
-  \node[noMargin, right= 3pt of b](c){
-    \includegraphics[trim = 0 90 0 0, clip, height=3cm]{fporigin}
-  };
-  \node[noMargin, right= 3pt of c]{
-    \begin{tikzpicture}
-      \node[noMargin](d){
-      \includegraphics[trim = 0 90 0 0, clip, height=1.2cm]{fpnohom}
-      };
-      \node[noMargin, below= 5pt of d]{
-      \includegraphics[trim = 0 90 0 0, clip, height=1.2cm]{fpHom}
-      };
-    \end{tikzpicture}
-  };
-
-  \end{tikzpicture}
-
-  \caption{\footnotesize Qualitative results. 
-    (a) Example 1: orignal image, super-pixels' delineations and \ac{gt}. 
-    (b) Differences between \ac{gt} and the delination resulting from super-pixels' boundary.
-    (c) Ex. 2.
-    (d) weak $V(\cdot,\cdot)$
-    (e) strong $V(\cdot,\cdot)$
-    \vspace{-10pt}
-    }
-  \label{fig:results}
-\end{figure}
-
-
-\section{Method evaluation and comparison} 
-
-\begin{figure}[t]
-  \begin{subfigure}[b]{\textwidth}
-    {\tiny \input{content/results/figures/survey_table.tex}}
-    %\caption{\ac{bus} images lesion segmentation strategies compiled from the bulk of the literature: reported quantitative results and methodology highlights.}
-    \label{fig:surveyResults:survey}
-  \end{subfigure}
-  \begin{subfigure}[b]{\textwidth}
-    {\tiny \input{content/results/figures/survey.tex} }
-    %\caption{{\small comparison}}
-    \label{fig:surveyResults:comparison}
-  \end{subfigure}
-  \caption{Quantitative results compilation and comparison}
-  \label{fig:surveyResults}
-\end{figure}
-
-A 16 \ac{bus} images dataset with accompanying multi-label \ac{gt} delineating all the structures present in the images has been used to evaluate the proposed methodology for lesion segmentation application.
-Every image in the dataset presents a single lesion with a variable extension. 
-The size of the lesions ranges from under $1/100$ to over $1/5$ of the image size.
-The dataset is composed of cysts, \acp{fa}, \acp{dic} and \acp{ilc}. This dataset is now publicly available at \texttt{http://*************}
-
-Due to the lack of publicly available dataset and source code, a comparison between the
-different methods is limited to a compilation of results provided
-by the different authors and express them with common metric, as reported in~\cite{massich2013phd}.
-This information has been replicated in Fig.\,\ref{fig:surveyResults} using the \ac{aov} metric.
-
-Figure~\ref{fig:surveyResults} is divided in three main parts: (i) a table on the top summarizes the core stages of each study framework, (ii) a legend box on the right side informing of our testing setup and (iii) a comparison of the different metrics in a radial manner. An extra element is also represented in this radial representation: a blue swatch delimited by two blue dashed lines. The boundaries of this swatch correspond to the performance of some expert radiologists based on an inter- and intra-observer experiments carried out by Pons et al.~\cite{gerard2013}.
-It is interesting to note that some methodologies outperform this swatch.
-A publicly available dataset should allow a better comparison in that regard.
-
-The results point out the inherent capabilities of \ac{ml} to cope with data scalability and variability, induce its usage in conjunction with larger datasets.
-Whereas, \ac{acm} methodologies show its effectiveness for model the boundary in a natural manner.
-% The ability of \ac{ml} to cope with data variability, as well as its need of data, explains why these methodologies
-% have been tested, whereas the ability of \ac{acm} methods in constraining the boundary lead to slightly better results in terms of \ac{aov}.
-
-For our proposed framework, the performance in terms of \ac{aov} lies within the state-of-the-art despite its final delineation 
-limited by the capacity of the super-pixels to snap the desired boundary.
-Figure~\ref{fig:results} shows some qualitative results where the limitations of labeling super-pixels when compared to hand-drawn \ac{gt}.
-Figure~\ref{fig:results} also illustrates the influence of the pair-wise term.
-%depicts the differences between the delineation resulting from a proper labeling of the super-pixels and the one from the \ac{gt}.
-
-%The iconography used for the table, relates methodology stages, the technology used and if the stages have been treated separately or as a single processing.
-%The figure, also arranges the information in a radial manner for direct visual comparison.
-
-
-
-%Comparing these results, the inconvenience of unexciting public data can be obviously highlighted, since that several of these results outperform the manual delineations performed in Pons et al.~\cite{gerard2013} on the dataset here used.
-
-
-% Figure~\ref{fig:results} shows qualitative results, whereas the quantitative results from the best configuration are reported as a table in Fig.\,\ref{fig:surveyResults}. %~\cite{massich2013phd}.
-
-%Despite the fact that a \ac{fpr} of $0.4$ seems significant, based on our experiments most of the images produce no \ac{fp} lesions.
-%However, images with \ac{fp} lesions, are likely to produce more several of them as shown in \cref{fig:results}c-e.
-%The amount of \ac{fp} lesions can be trimmed by applying a higher cost in the pairwise therm (compare \cref{fig:resuts:smallPWterm} and \cref{fig:results:bigPWterm}.
-%Nevertheless, a severe increasing of the pairwise cost also increases the \ac{fnr} since some lesions are missed due to over-smoothing. %~\cite{massich2013phd}.
-%The situation of having a larger \ac{fnr} is less desirable than reducing the \ac{fpr}. 
-%The \ac{fnr} reported in \cref{fig:surveyResults:method} is caused by an image within the dataset that its lesion is fully contained in a single super-pixel and still around $20\%$ of this super-pixel's area is healty tissue. 
-
-% Due to the lack of publicly available data and source code, there is no manner to perform a comparison further apart of compiling the results reported in the literature.
-% Based on \emph{******** et al.} the state-of-the-art methodologies found in the literature, the results are summarized in Fig.\,\ref{fig:surveyResults} and are reported in terms of \ac{aov} for comparison purposes. The references equivalence can be found in~\cite{massich2013phd}
-%compiles relevant metholodologies relevant methodologies found in the literature 
-%The table in \Cref{fig:surveyResults:survey} complies the evaluation reported by the authors of the most relevant methodologies found in the literature. %~\cite{massich2013phd}.
-%Details about the methodologies proposed in the literature can also be found in the aforesaid table.
-%Specifically it is detailed the category of technique been used for detecting the lesions, segmenting it and post-process the delineations (if any).
-%The studied categories are: \ac{ml}, \ac{acm} and others.
-%if the those stages are treated as independent and connected in a daisy-chain fashion, or otherwise the stages are addressed in an atomic manner.
-
-
-%\Cref{fig:surveyResults:comparison} renders the information present in \cref{fig:surveyResults:survey} and \cref{fig:surveyResults:method} in a visual manner compare all the results at once.
-%The methodologies arranged in a radial fashion and grouped by its most representative technology category. 
-%In red it can be found a small, medium and large categorization of the dataset reported for testing.
-%The concentric circles represent \ac{aov}. 
-%The blue line correspond to the \ac{aov} results reported in the literature, whereas the black line indicates the \ac{aov} our framework scored in our testing.
-
-%\footnote{The dataset used for testing the framework here proposed corresponds to the subset of images used by Pons et al.~\cite{gerard2013} that have accompanying multi-labelled \ac{gt}.}.
-
-%%% Local Variables: 
-%%% mode: latex
-%%% TeX-master: "../../master.tex"
+This is the results
